feat(): Mono on External, Removed Category and Update application.yaml, bump V2.2.0